# otus_smart_home

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
app/src/: main.rs
examples/: example1.rs  example2.rs  example2_server.rs  mock_devices.rs  net_home.rs  net_home_interactive.rs  net_socket_emulator.rs  net_termo_emulator.rs  networked_devices.rs  networked_socket.rs  owned_devices.rs  tcp_socket_ui.rs
socket/src/: lib.rs
src/: device.rs  home.rs  lib.rs  main.rs
src/device/: client.rs  mod.rs  server.rs  tcp_socket_client.rs
tests/: test_report.rs
